<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.cloudai</groupId>
    <artifactId>cloud-ai</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>Cloud AI — Agent Harness</name>
    <description>Java AI Agent 运行时框架</description>

    <modules>
        <module>cloud-ai-core</module>
        <module>cloud-ai-llm</module>
        <module>cloud-ai-memory</module>
        <module>cloud-ai-persona</module>
        <module>cloud-ai-context</module>
        <module>cloud-ai-skills</module>
        <module>cloud-ai-security</module>
        <module>cloud-ai-execution</module>
        <module>cloud-ai-runtime</module>
        <module>cloud-ai-server</module>
        <module>cloud-ai-example</module>
    </modules>

    <properties>
        <java.version>21</java.version>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <spring-boot.version>4.1.0</spring-boot.version>
        <junit-jupiter.version>5.11.4</junit-jupiter.version>
        <mockito.version>5.12.0</mockito.version>
        <maven-compiler-plugin.version>3.13.0</maven-compiler-plugin.version>
        <maven-surefire-plugin.version>3.3.0</maven-surefire-plugin.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- JUnit BOM 必须在 spring-boot-dependencies 之前，因为 Spring Boot 4.1.0 管理 JUnit 6.x，
                 IntelliJ IDEA 2024.3 的 JUnit Runner 不兼容 Platform 6.x -->
            <dependency>
                <groupId>org.junit</groupId>
                <artifactId>junit-bom</artifactId>
                <version>${junit-jupiter.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>com.cloudai</groupId>
                <artifactId>cloud-ai-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.cloudai</groupId>
                <artifactId>cloud-ai-llm</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.cloudai</groupId>
                <artifactId>cloud-ai-memory</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.cloudai</groupId>
                <artifactId>cloud-ai-persona</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.cloudai</groupId>
                <artifactId>cloud-ai-context</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.cloudai</groupId>
                <artifactId>cloud-ai-skills</artifactId>
                <version>${project.version}</version>
            </dependency>
                                    <dependency>
                <groupId>com.cloudai</groupId>
                <artifactId>cloud-ai-security</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.cloudai</groupId>
                <artifactId>cloud-ai-execution</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.cloudai</groupId>
                <artifactId>cloud-ai-runtime</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>com.cloudai</groupId>
                <artifactId>cloud-ai-server</artifactId>
                <version>${project.version}</version>
            </dependency>
                        <dependency>
                <groupId>org.springframework.retry</groupId>
                <artifactId>spring-retry</artifactId>
                <version>2.0.7</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>${mockito.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven-compiler-plugin.version}</version>
                    <configuration>
                        <source>${java.version}</source>
                        <target>${java.version}</target>
                        <parameters>true</parameters>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${maven-surefire-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <version>${spring-boot.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>



